<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reportsChatPager.ReportsPagerFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabSelectedTextColor="@color/foreground"
            app:tabTextColor="@android:color/black">

            <android.support.design.widget.TabItem
                android:id="@+id/tab_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_approved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approved" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_myReports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myReports" />

        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
