<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileImageActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_applicationName"
        style="@style/TextViewStyle.ApplicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applicationName"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/user_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <ImageButton
        android:id="@+id/imageButton_add"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/transparent"
        android:onClick="addButton"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/image_user"
        app:layout_constraintEnd_toEndOf="@+id/image_user"
        app:srcCompat="@drawable/add" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <TextView
        android:id="@+id/text_uploadYourProfile"
        style="@style/TextViewStyle.TextForms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/uploadYourProfile"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/image_user" />

    <Button
        android:id="@+id/button_upload"
        style="@style/ButtonStyle.Forms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="uploadButton"
        android:text="@string/upload"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text_uploadYourProfile" />

    <TextView
        android:id="@+id/having_problem_text"
        style="@style/TextViewStyle.TextForms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/havingProblems"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_applicationEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/text_applicationEmailAddress"
        style="@style/TextViewStyle.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="emailAddressButton"
        android:text="@string/iReportEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />
</android.support.constraint.ConstraintLayout>